package modern_graphics_lib

data class Point(val x: Int, val y: Int)
